--- a/src/main/resources/data-access.properties
+++ b/src/main/resources/data-access.properties
@@ -1,7 +1,7 @@
 # MySQL Settings
 ds.poolName=springHikariCP
 ds.driverClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-ds.url=jdbc:mysql://localhost:3306/shitibao?useUnicode=true&amp;characterEncoding=UTF-8
+ds.url=jdbc:mysql://localhost:3306/test?useUnicode=true&amp;characterEncoding=UTF-8
 ds.username=root
 ds.password=root
 ds.connectionTimeout=5000
